--- a/src/komponenter/modal/bekreftelseModal.less
+++ b/src/komponenter/modal/bekreftelseModal.less
@@ -1,11 +1,13 @@
+@import '~nav-frontend-core/less/_variabler';
+
 @mobile-breakpoint: 768px;
 @button-height: 46px;
 
 .bekreftelseModal {
     &__modal-container {
         padding: 1rem 1rem;
-        max-width: 530px;
-        min-width: 320px;
+        max-width: @container-tablet;
+        min-width: 20rem;
         overflow: visible;
     }
 
