oppdatert Sortering og Filtreringsmuligheter ved besluttervisning

--- a/src/BeslutterSide/BeslutterSide.less
+++ b/src/BeslutterSide/BeslutterSide.less
@@ -26,11 +26,6 @@
      margin: 1rem 0;
     }
 
-
-
-
-
-
     &__wrapper {
         max-width: @container-desktop;
         width: 100%;
@@ -41,11 +36,5 @@
         opacity: 0.3;
     }
 
-    @media(min-width: @container-tablet) {
-
-
-
-
-
-    }
+    @media(min-width: @container-tablet) {}
 }
