--- a/src/AvtaleOversikt/EtterRegistrering/EtterRegistrering.less
+++ b/src/AvtaleOversikt/EtterRegistrering/EtterRegistrering.less
@@ -11,6 +11,10 @@
         }
     }
 
+    &__etterregistrering-knapp {
+        width: 100%;
+    }
+
     &__header {
         margin-bottom: 1rem;
     }
