lagt til oppsummering på godkjhenningssteg. fikset relasjoner. ++
Co-authored-by: Magnus Skalleberg Rom <magnus.skalleberg.rom@nav.no>
Co-authored-by: Mattias Lundmark <mattias.lundmark@nav.no>

--- a/src/AvtaleSide/steg/KontaktInformasjonSteg/ArbeidsgiverinfoDel/Relasjoner.less
+++ b/src/AvtaleSide/steg/KontaktInformasjonSteg/ArbeidsgiverinfoDel/Relasjoner.less
@@ -1,5 +1,5 @@
 .relasjoner {
-    margin-top: 2rem;
+    padding: 0.5rem 0.5rem 2rem 0.5rem;
 
     &__relasjon-hjelpetekst {
         border: 1px solid #c6c2bf;
