--- a/src/OpprettAvtale/OpprettAvtaleVeileder/OpprettAvtale.less
+++ b/src/OpprettAvtale/OpprettAvtaleVeileder/OpprettAvtale.less
@@ -111,14 +111,13 @@
 
         &__tiltakstypeWrapper {
             display: flex;
-            flex-direction: row;
+            flex-wrap: wrap;
 
             label {
+                width: 25rem;
                 flex-grow: 1;
                 margin-right: 0.5rem;
-                &:last-child {
-                    margin-right: 0;
-                }
+                margin-bottom: 0.5rem;
             }
         }
     }
