--- a/src/komponenter/modal/bekreftelseModal.less
+++ b/src/komponenter/modal/bekreftelseModal.less
@@ -6,7 +6,7 @@
 .bekreftelseModal {
     &__modal-container {
         padding: 1rem 1rem;
-        max-width: @container-tablet;
+        max-width: @screen-lg;
         min-width: 20rem;
         overflow: visible;
     }
@@ -33,7 +33,7 @@
     }
 
     &__varselTekst {
-        padding: 0 1rem;
+        padding: 0 0.5rem;
     }
 
     &__lenkeknapp {
@@ -95,7 +95,7 @@
             align-items: flex-end;
 
             .knapp:not(:last-child) {
-                margin-bottom: 0rem;
+                margin-bottom: 0;
                 margin-right: 1rem;
             }
         }
