Fikset oppsumering Deltager

--- a/src/AvtaleSide/steg/GodkjenningSteg/Oppsummering/AvtaleinfoFeltSjekk/AvtaleinfoFeltSjekk.less
+++ b/src/AvtaleSide/steg/GodkjenningSteg/Oppsummering/AvtaleinfoFeltSjekk/AvtaleinfoFeltSjekk.less
@@ -22,6 +22,10 @@
         &--farge-lysblaa {
             border-left: 3px solid #cce1f3;
         }
+
+        &--farge-lyslilla {
+            border-left: 3px solid #d09cd0;
+        }
     }
 
     &__etikettInfo {
