Fikset styling for horisontal gruppe med radio buttons

--- a/src/OpprettAvtale/OpprettAvtaleVeileder/OpprettAvtale.less
+++ b/src/OpprettAvtale/OpprettAvtaleVeileder/OpprettAvtale.less
@@ -120,5 +120,18 @@
                 margin-bottom: 0.5rem;
             }
         }
+
+        &__horisontalGruppeWrapper {
+            display: flex;
+            flex-direction: row;
+
+            label {
+                flex-grow: 1;
+                margin-right: 0.5rem;
+                &:last-child {
+                    margin-right: 0;
+                }
+            }
+        }
     }
 }
