Endret vilke kolonner som vises for arbeidsgiver og veileder i oversikten. Lagt til sortering på start dato

--- a/src/AvtaleOversikt/AvtaleTabell.less
+++ b/src/AvtaleOversikt/AvtaleTabell.less
@@ -49,7 +49,7 @@
     }
 
     &__deltakerOgBedrift {
-        width: 12rem;
+        width: 11rem;
         margin-right: 1rem;
     }
 
@@ -58,8 +58,8 @@
         padding-right: 1rem;
     }
 
-    &__opprettet {
-        width: 8.8rem;
+    &__dato {
+        width: 6rem;
     }
 
     &__statusikon {
