Litt bedre styling når det er lange bedriftsnavn i godkjenningstabell

--- a/src/AvtaleSide/steg/GodkjenningSteg/GodkjenningStatus/GodkjenningRad/GodkjenningRad.less
+++ b/src/AvtaleSide/steg/GodkjenningSteg/GodkjenningStatus/GodkjenningRad/GodkjenningRad.less
@@ -5,4 +5,8 @@
     &__godkjenningIkon {
         padding-left: 1rem;
     }
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-content: stretch;
 }
