lagt til Les mer om taushetsplikten til mentor Ekspandertpanel i OmMentorOppsummering.tsx som vises for alle avtalepart

--- a/src/AvtaleOversikt/EtterRegistrering/EtterRegistrering.less
+++ b/src/AvtaleOversikt/EtterRegistrering/EtterRegistrering.less
@@ -70,6 +70,10 @@
             width: 40rem;
             padding: 2.5rem;
         }
+        &__panel_modal {
+            width: 100%;
+            padding: 0;
+        }
 
         &__input-sok {
             display: flex;
