--- a/src/AvtaleOversikt/Taushetserklæring/Taushetserklæring.less
+++ b/src/AvtaleOversikt/Taushetserklæring/Taushetserklæring.less
@@ -21,7 +21,7 @@
         justify-content: center;
         width: 80px;
         right: 48%;
-        top:0.1%;
+        top:.1%;
         @media (max-height: 710px) {
             display: none;
         }
@@ -49,6 +49,10 @@
         &__modal {
             width: 40rem;
             padding: 2.5rem;
+        }
+        &__panel_modal {
+            width: 100%;
+            padding: 0;
         }
     }
 }
