Pilen til høyre i avtale tabell listen  skal ikke vises hvis taushetserklæring ikke er signert

--- a/src/AvtaleOversikt/AvtaleTabell.less
+++ b/src/AvtaleOversikt/AvtaleTabell.less
@@ -4,6 +4,10 @@
         margin-bottom: 0.5rem;
     }
 
+    .lenkepanel.skjulIndikator span {
+        display: none;
+    }
+
     &__arbeidsgiver-tekst {
         margin-top: 2rem;
     }
