--- a/src/AvtaleSide/steg/GodkjenningSteg/Oppsummering/instruks/instruks.less
+++ b/src/AvtaleSide/steg/GodkjenningSteg/Oppsummering/instruks/instruks.less
@@ -19,6 +19,10 @@
         margin-left: -1rem;
     }
 
+    &__list-element {
+        margin-bottom: 0.5rem;
+    }
+
     @media print {
         display: none;
     }
