--- a/src/komponenter/EkspanderbartPanelRad/EkspanderbartPanelRad.less
+++ b/src/komponenter/EkspanderbartPanelRad/EkspanderbartPanelRad.less
@@ -4,13 +4,32 @@
     &__element {
         display: flex;
         margin-bottom: 1.5rem;
-        padding: 1rem;
+        padding: 1rem 0;
     }
     &__tekst {
-        margin-left: 1rem;
+        margin-left: 0.625rem;
         margin-top: -0.3rem;
     }
     &__ikon {
         width: 60px;
+        & > svg {
+            width: 1.75rem;
+            height: 1.75rem;
+        }
+    }
+
+    @media(min-width: 768px) {
+        &__element {
+            padding: 1rem;
+        }
+        &__tekst {
+            margin-left: 1rem;
+        }
+        &__ikon {
+            & > svg {
+                width: 2.25rem;
+                height: 2.25rem;
+            }
+        }
     }
 }
