Lagt til naavaerende sluttdato paa forkort- og forleng avtale.
Co-authored-by: magnus.skalleberg.rom@nav.no

--- a/src/komponenter/modal/bekreftelseModal.less
+++ b/src/komponenter/modal/bekreftelseModal.less
@@ -99,6 +99,12 @@
                 margin-right: 1rem;
             }
         }
+        &__modal-container {
+            min-width: 22rem;
+        }
+        &__varselTekst {
+            padding: 0 1.5rem;
+        }
     }
 }
 
