refaktorert komponenter og lagt til rest-kall for sjekk om avtale eksisterer

--- a/src/OpprettAvtale/OpprettAvtaleVeileder/OpprettAvtale.less
+++ b/src/OpprettAvtale/OpprettAvtaleVeileder/OpprettAvtale.less
@@ -109,7 +109,7 @@
             margin-left: 0.2rem;
         }
 
-        &__tiltakstypeWrapper {
+        &__tiltakstype-wrapper {
             display: flex;
             flex-wrap: wrap;
 
