fikset par styling feil paa besluttervisning

--- a/src/AvtaleOversikt/EtterRegistrering/EtterRegistrering.less
+++ b/src/AvtaleOversikt/EtterRegistrering/EtterRegistrering.less
@@ -11,6 +11,10 @@
         }
     }
 
+    &__etterregistrering-knapp {
+        width: 100%;
+    }
+
     &__lagreKnapp {
         width: 100%;
     }
