satt font-size til 1rem som var default før. den nye defaulten er 18px for å forbedre lesbarheten på nav.no Dette er forandrer endel på ting hos oss og ikke kritisk å ha

--- a/src/index.less
+++ b/src/index.less
@@ -10,6 +10,12 @@
 @import 'AvtaleSide/steg/GodkjenningSteg/Oppsummering/Avtaleparter/Avtaleparter.less';
 @import 'AvtaleOversikt/AvtaleOversikt.less';
 
+
+body {
+    font-size: 1rem;
+}
+
+
 body,
 body .tiltaksgjennomforing {
     background-color: @navGraBakgrunn;
