--- a/src/komponenter/Varsel/Varsel.less
+++ b/src/komponenter/Varsel/Varsel.less
@@ -9,6 +9,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        width: 30rem;
 
         &__lukknapp {
             margin: -0.3rem -0.3rem -0.3rem 0.7rem;
