--- a/src/OpprettAvtale/OpprettAvtaleVeileder/OpprettAvtale.less
+++ b/src/OpprettAvtale/OpprettAvtaleVeileder/OpprettAvtale.less
@@ -29,6 +29,7 @@
     }
 
     &__knappRad {
+        margin-top: 1rem;
         display: flex;
         flex-direction: column;
         align-items: center;
