--- a/src/OpprettAvtale/OpprettAvtaleVeileder/alleredeOpprettetTiltak/alleredeOpprettetAvtaleAdvarsel.less
+++ b/src/OpprettAvtale/OpprettAvtaleVeileder/alleredeOpprettetTiltak/alleredeOpprettetAvtaleAdvarsel.less
@@ -5,7 +5,7 @@
 
   &__list-element {
     margin-bottom: 0.5rem;
-    list-style-type: circle;
+    list-style-type: inherit;
     list-style-position: outside;
 
     & > .alleredeOpprettetAvtaleAdvarsel__list-element-content > svg {
