--- a/src/komponenter/modal/bekreftelseModal.less
+++ b/src/komponenter/modal/bekreftelseModal.less
@@ -29,7 +29,7 @@
 
     &__tittel {
         text-align: center;
-        padding-bottom: 1rem;
+        padding: 0 1rem 1rem 1rem;
     }
 
     &__varselTekst {
