WIP Fjernet Chevron og en del andre pakker må fikse CSS

--- a/src/AvtaleSide/AnnullerAvtalen/AnnullerAvtalen.less
+++ b/src/AvtaleSide/AnnullerAvtalen/AnnullerAvtalen.less
@@ -8,6 +8,7 @@
     &__lenke {
         display: flex;
         align-items: center;
+        padding-bottom: 1rem;
     }
     @media print {
         display: none;
