--- a/src/AvtaleSide/OvertaAvtalen/overtaAvtalen.less
+++ b/src/AvtaleSide/OvertaAvtalen/overtaAvtalen.less
@@ -1,7 +1,8 @@
 .overtaavtalen {
     height: 100%;
+    margin-bottom: 1rem;
 
-    &__lenke {
+    &__link {
         display: flex;
         flex-direction: row;
         align-content: center;
