--- a/src/AvtaleSide/steg/GodkjenningSteg/Versjonering/TidligereVersjoner.less
+++ b/src/AvtaleSide/steg/GodkjenningSteg/Versjonering/TidligereVersjoner.less
@@ -1,12 +1,16 @@
 @import '~nav-frontend-core/less/_variabler';
 
 .tidligereVersjoner {
-    margin-bottom: 2.5rem;
+    margin-bottom: 0.75rem;
+    border-radius: 4px;
+
+    .navds-link-panel__content {
+        width: 100%;
+    }
 
     &__header {
         display: flex;
         flex-direction: row;
-        width: 100%;
         border-bottom: 1px solid @navGra20;
         margin-bottom: 0.5rem;
         padding-bottom: 0.5rem;
@@ -17,14 +21,6 @@
         justify-content: space-between;
         align-items: center;
         flex-wrap: nowrap;
-        width: 95%;
         position: relative;
-    }
-    &__dato {
-        justify-content: flex-end;
-        margin-right: 1.5rem;
-    }
-    svg {
-        margin-right: 0.5rem;
     }
 }
