--- a/src/komponenter/alleredeOpprettetTiltak/modal/alleredeOpprettetAvtaleModal.less
+++ b/src/komponenter/alleredeOpprettetTiltak/modal/alleredeOpprettetAvtaleModal.less
@@ -1,4 +1,4 @@
-@import '~nav-frontend-core/less/_variabler';
+@import 'node_modules/nav-frontend-core/less/_variabler';
 
 .alleredeOpprettetAvtaleModal {
   &__modal-container {
@@ -9,6 +9,14 @@
   }
   &__tittel {
     margin: 0.25rem 0.75rem 1rem 1.75rem;
+  }
+
+  &__ingress {
+    padding: 0 0.75rem 0.75rem 1.75rem;
+    & > p {
+      display: flex;
+      justify-content: center;
+    }
   }
 
   &__body {
