--- a/src/AvtaleOversikt/AvtaleTabell.less
+++ b/src/AvtaleOversikt/AvtaleTabell.less
@@ -1,10 +1,11 @@
 @import '~nav-frontend-core/less/_variabler';
 .avtaletabell {
-    .lenkepanel {
+
+    &__linkpanel {
         margin-bottom: 0.5rem;
     }
 
-    .lenkepanel.skjulIndikator span {
+    .linkpanel.skjulIndikator span {
         display: none;
     }
 
@@ -53,7 +54,7 @@
     }
 
     &__deltakerOgBedrift {
-        width: 11rem;
+        width: 10rem;
         margin-right: 1rem;
     }
 
@@ -67,10 +68,10 @@
     }
 
     &__statusikon {
-        margin-right: 1rem;
+        margin-right: 2rem;
     }
 
     &__status {
-        width: 8rem;
+        width: 4rem;
     }
 }
