Fjernet nav-frontend-modal

--- a/src/AvtaleSide/VarselModal/VarselModal.less
+++ b/src/AvtaleSide/VarselModal/VarselModal.less
@@ -1,6 +1,11 @@
 @import '~nav-frontend-core/less/_variabler';
 
 .varsel-modal {
+    &__modal {
+        overflow: visible;
+        padding: 2rem;
+    }
+
     &__hendelse-ikon {
         margin-right: 0.5rem;
     }
