--- a/src/AvtaleSide/steg/GodkjenningSteg/Godkjenning/Godkjenning.less
+++ b/src/AvtaleSide/steg/GodkjenningSteg/Godkjenning/Godkjenning.less
@@ -23,7 +23,7 @@
         display: none;
     }
     &__godkjenn-pa-vegne-av {
-       margin-top: 2rem;
+       margin: 2rem 0 1rem 0;
     }
     &__advarsel {
         margin: 1rem 0;
