--- a/src/AvtaleSide/steg/GodkjenningSteg/Godkjenning/Godkjenning.less
+++ b/src/AvtaleSide/steg/GodkjenningSteg/Godkjenning/Godkjenning.less
@@ -3,29 +3,44 @@
         display: flex;
         flex-direction: column;
     }
-
     .ekspanderbartPanel {
         margin-top: 1rem;
     }
-
     .veilederpanel-med-ikon {
         margin-bottom: 1rem;
         margin-top: 1rem;
     }
-
     .bekreftCheckboksPanel {
         margin: 1.5rem 0;
-
         &:not(:last-of-type) {
             margin-bottom: 0;
         }
     }
-
     &__lagreKnapp {
         width: 100%;
     }
-
     @media print {
         display: none;
+    }
+    &__godkjenn-pa-vegne-av {
+       margin: 2rem 0 1rem 0;
+    }
+    &__advarsel {
+        margin: 1rem 0;
+    }
+    &__skjema-gruppe {
+        margin: 1rem 0;
+    }
+    &__checkbox-wrapper {
+        padding: 1rem 0 1rem 2rem;
+    }
+    &__checkboxer {
+        margin-top: 0.5rem;
+    }
+    &__lagre-knapper {
+        margin-bottom: 1rem;
+    }
+    &__checkbox-sub-title {
+        margin: 1rem 0 0.5rem 0;
     }
 }
