--- a/src/OpprettAvtale/OpprettAvtaleVeileder/OpprettAvtale.less
+++ b/src/OpprettAvtale/OpprettAvtaleVeileder/OpprettAvtale.less
@@ -29,6 +29,7 @@
     }
 
     &__knappRad {
+        margin-top: 1rem;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -109,7 +110,7 @@
             margin-left: 0.2rem;
         }
 
-        &__tiltakstypeWrapper {
+        &__tiltakstype-wrapper {
             display: flex;
             flex-wrap: wrap;
 
