fikset avtaletabell css

--- a/src/AvtaleOversikt/AvtalekortMobil.less
+++ b/src/AvtaleOversikt/AvtalekortMobil.less
@@ -1,6 +1,7 @@
 @import '~nav-frontend-core/less/_variabler';
 .avtalekortMobil {
     padding: 1.5rem 1rem 1.5rem 2rem;
+    margin-bottom: 0.5rem;
 
     &__ulest-varsel-ikon {
         background-color: #006eed;
@@ -10,7 +11,7 @@
         height: 20px;
         width: 20px;
         position: absolute;
-        left: -0.6rem;
+        left: -2.6rem;
     }
 
     &__ulest-varsel-border {
