--- a/src/InnloggingBoundary/Innloggingsside.less
+++ b/src/InnloggingBoundary/Innloggingsside.less
@@ -15,6 +15,10 @@
         max-width: 45rem;
     }
 
+    &__logginnKnapp {
+        text-transform: uppercase;
+    }
+
     @media (min-width: @screen-sm-min) {
         // Desktop only
         &__loginKnapper {
