--- a/src/AvtaleSide/steg/GodkjenningSteg/Godkjenning/Godkjenning.less
+++ b/src/AvtaleSide/steg/GodkjenningSteg/Godkjenning/Godkjenning.less
@@ -18,12 +18,13 @@
     }
     &__lagreKnapp {
         width: 100%;
+        text-transform: uppercase;
     }
     @media print {
         display: none;
     }
     &__godkjenn-pa-vegne-av {
-       margin: 2rem 0 1rem 0;
+        margin: 2rem 0 1rem 0;
     }
     &__advarsel {
         margin: 1rem 0;
@@ -38,6 +39,7 @@
         margin-top: 0.5rem;
     }
     &__lagre-knapper {
+        text-transform: uppercase;
         margin-bottom: 1rem;
     }
     &__checkbox-sub-title {
