--- a/src/komponenter/Varsel/Varsel.less
+++ b/src/komponenter/Varsel/Varsel.less
@@ -13,6 +13,8 @@
 
         &__lukknapp {
             margin: -0.3rem -0.3rem -0.3rem 0.7rem;
+            border: 0.15rem solid black;
+            padding: 0rem;
         }
     }
 }
