Oppdater Css og Modal
Co-authored-by: Millad Dagdoni <millad.dagdoni@nav.no>

--- a/src/AvtaleOversikt/Taushetserklæring/Taushetserklæring.less
+++ b/src/AvtaleOversikt/Taushetserklæring/Taushetserklæring.less
@@ -21,7 +21,7 @@
         justify-content: center;
         width: 80px;
         right: 48%;
-        top:.1%;
+        top: 2.3%;
         @media (max-height: 710px) {
             display: none;
         }
@@ -49,7 +49,6 @@
     @media (min-width: 768px) {
         &__modal {
             width: 40rem;
-
             padding: 2.5rem;
         }
         &__panel_modal {
@@ -57,18 +56,17 @@
             padding: 0;
         }
 
-        &__modal .varsel__innhold{
-            width:60%;
+        &__modal .varsel__innhold {
+            width: 60%;
         }
     }
-    @media (min-width: 350px) {
-
-        &__modal .varsel__innhold{
-            width:60%;
+    @media (min-width: 100px) and (max-width: 767px) {
+        &__modal .varsel__innhold {
+            width: 60%;
         }
-       &__topIconContainer {
-            right:43%;
-
+        &__topIconContainer {
+            top: -1.7%;
+            right: 43%;
         }
         &__modal {
             width: 100%;
