--- a/src/index.less
+++ b/src/index.less
@@ -35,6 +35,7 @@ svg {
 }
 
 .accordion .navds-accordion__header,
+.accordion .navds-accordion__content,
 .accordion .navds-accordion__item--open .navds-accordion__header {
     background-color: white;
 }
