Fikset css feil

--- a/src/AvtaleOversikt/AvtaleTabell.less
+++ b/src/AvtaleOversikt/AvtaleTabell.less
@@ -62,6 +62,18 @@
     }
 
     &__status {
-        width: 4rem;
+        width: 8rem;
+    }
+
+    &__besluterdato {
+        margin-left: 5rem;
+    }
+
+    &__headerstatus {
+        margin-left: 8.5rem;
+    }
+
+    &__beslutterStatus {
+        margin-left: 5rem;
     }
 }
