--- a/src/AvtaleSide/AvtaleSide.less
+++ b/src/AvtaleSide/AvtaleSide.less
@@ -24,7 +24,7 @@
             &__content-inner {
                 display: flex;
                 flex-direction: column;
-                padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+                padding: 0.5rem 1rem;
                 .lenke {
                     margin: 1rem;
                 }
