--- a/src/AvtaleOversikt/Filtrering/SøkeInput.less
+++ b/src/AvtaleOversikt/Filtrering/SøkeInput.less
@@ -1,13 +1,8 @@
 .søk {
-    //display: flex;
-    //flex-direction: row;
-    //flex-wrap: wrap;
-    //align-content: space-around;
-
-    &__input {
+    &__input-sok {
         margin-bottom: 0.5rem;
     }
 
-    &__knapp {
+    &__button {
     }
 }
