Oppdatert typografi i TiltaksTypeRadioPanel og lagt til nowrap på tekst opprettAvtaleVeileder

--- a/src/OpprettAvtale/OpprettAvtaleVeileder/opprettAvtaleVeileder.less
+++ b/src/OpprettAvtale/OpprettAvtaleVeileder/opprettAvtaleVeileder.less
@@ -1,14 +1,18 @@
 .opprett-avtale {
-  &__innholdstittel {
-    text-align: center;
-    margin: 1rem 0 2rem 0;
-  }
+    &__innholdstittel {
+        text-align: center;
+        margin: 1rem 0 2rem 0;
+    }
 
-  &__valg-tiltakstype-container {
-    margin: 1rem 0;
-  }
+    &__valg-tiltakstype-container {
+        margin: 1rem 0;
+    }
 
-  &__tiltakstype-wrapper {
-    margin: 1rem 0 0 0;
-  }
+    &__valg-tiltakstype-tekst {
+        white-space: nowrap;
+    }
+
+    &__tiltakstype-wrapper {
+        margin: 1rem 0 0 0;
+    }
 }
