Slettet SkjemeUndertittel og Oppdatert typografi i Utregningsrad, TidligereVersjoner og SkjemaTittel

--- a/src/AvtaleSide/steg/GodkjenningSteg/Versjonering/TidligereVersjoner.less
+++ b/src/AvtaleSide/steg/GodkjenningSteg/Versjonering/TidligereVersjoner.less
@@ -23,4 +23,8 @@
         flex-wrap: nowrap;
         position: relative;
     }
+
+    &__alle_versjoner_tittel {
+        padding-bottom: 1rem;
+    }
 }
