byttet ut flere pakker i design systemet mot de nye.

--- a/src/AvtaleSide/Stegmeny/StegmenyLenke/StegmenyLenke.less
+++ b/src/AvtaleSide/Stegmeny/StegmenyLenke/StegmenyLenke.less
@@ -22,8 +22,8 @@
     }
 
     &.aktiv {
-        background-color: @navDypBla;
-        color: white;
+        background-color: #cce1ff;
+        //color: white;
     }
 }
 .hidden {
