--- a/src/AvtaleSide/steg/GodkjenningSteg/Oppsummering/Stegoppsummering/Stegoppsummering.less
+++ b/src/AvtaleSide/steg/GodkjenningSteg/Oppsummering/Stegoppsummering/Stegoppsummering.less
@@ -1,4 +1,3 @@
-@import '~nav-frontend-core/less/_variabler';
 
 .stegoppsummering {
     margin-bottom: 2.5rem;
@@ -7,7 +6,7 @@
         display: flex;
         flex-direction: row;
         width: 100%;
-        border-bottom: 1px solid @navGra20;
+        border-bottom: 1px solid #c9c9c9; //@navGra20;
         margin-bottom: 2rem;
         padding-bottom: 0.5rem;
     }
