--- a/src/AvtaleSide/steg/KontaktInformasjonSteg/ArbeidsgiverinfoDel/Relasjoner.less
+++ b/src/AvtaleSide/steg/KontaktInformasjonSteg/ArbeidsgiverinfoDel/Relasjoner.less
@@ -1,48 +1,62 @@
 .relasjoner {
-    padding: 0.5rem 0.5rem 2rem 0.5rem;
-    margin-bottom: 2rem;
+  padding: 0.5rem 0.5rem 2rem 0.5rem;
 
-    &__heading {
-        margin-bottom: 1rem;
-    }
-    &__info-ingress {
-        margin-bottom: 1rem;
-        display: flex;
-        alignItems: flex-end;
-    }
-    &__LesMerPanel {
-        margin-bottom: 0.5rem;
-    }
-    &__harFamilietilknytning-forklaring {
-        margin-bottom: 1rem;
-    }
+  &__heading {
+    margin-bottom: 1rem;
+  }
 
-    &__relasjon-hjelpetekst {
-        border: 1px solid #c6c2bf;
-        border-radius: 3px;
-        padding: 1rem;
+  &__info-ingress {
+    margin-bottom: 1rem;
+    display: flex;
+    alignItems: flex-end;
+  }
+
+  &__LesMerPanel {
+    margin-bottom: 0.5rem;
+  }
+
+  &__harFamilietilknytning-forklaring {
+    margin-bottom: 1rem;
+  }
+
+  &__relasjon-hjelpetekst {
+    border: 1px solid #c6c2bf;
+    border-radius: 3px;
+    padding: 1rem;
+  }
+
+  &__svar {
+    width: 100%;
+    background-color: rgba(241, 241, 241, 1);
+    border-radius: 4px;
+    padding: 0.5rem 0.5rem 0.5rem 1rem;
+
+    & > p {
+      font-weight: 500;
     }
+  }
 
-    &__svar {
-        width: 100%;
-        background-color: rgba(241, 241, 241, 1);
-        border-radius: 4px;
-        padding: 0.5rem 0.5rem 0.5rem 1rem;
-        & > p {
-            font-weight: 500;
-        }
+  &__familie-relasjoner {
+    margin-top: 1.5rem;
+  }
+
+  &__familie-relasjoner-valg {
+    display: flex;
+    & div:nth-child(1) {
+      margin-right: 2rem;
     }
+  }
 
-    &__familietilknytning-valg {
-        display: flex;
+  &__familietilknytning-valg {
+    display: flex;
 
-        label {
-            flex-grow: 1;
-            margin-right: 0.5rem;
+    label {
+      flex-grow: 1;
+      margin-right: 0.5rem;
 
-            &:last-child {
-                margin-right: 0;
-            }
-        }
+      &:last-child {
+        margin-right: 0;
+      }
     }
+  }
 }
