--- a/src/AvtaleSide/steg/KontaktInformasjonSteg/kontorInfo/oppdatereKostnadssted.less
+++ b/src/AvtaleSide/steg/KontaktInformasjonSteg/kontorInfo/oppdatereKostnadssted.less
@@ -3,14 +3,22 @@
 
     &__input-wrapper {
         display: flex;
-        input {
-            margin-right: 1.25rem;
-            margin-bottom: 0;
-        }
+
+      
         .skjemaelement {
             margin-bottom: 0;
         }
     }
+
+    &__textField {
+        margin-right: 1.25rem;
+        margin-bottom: 0;
+    }
+
+    &__buttonDiv {
+        margin-top: 1.75rem;
+    }
+
     &__input-undertekst {
         margin-top: 0.75rem;
 
