--- a/src/InnloggingBoundary/Innloggingsside.less
+++ b/src/InnloggingBoundary/Innloggingsside.less
@@ -17,6 +17,7 @@
 
     &__logginnKnapp {
         text-transform: uppercase;
+        padding: 0.75rem 2.5rem;
     }
 
     @media (min-width: @screen-sm-min) {
