--- a/src/OpprettAvtale/OpprettelseFullfortVeileder/OpprettelseFullfortVeileder.less
+++ b/src/OpprettAvtale/OpprettelseFullfortVeileder/OpprettelseFullfortVeileder.less
@@ -15,6 +15,12 @@
         margin-bottom: 2rem;
     }
 
+    &__kopier-knapp {
+        margin-top: 3rem;
+        width: 14rem;
+        align-self: center;
+    }
+
     &__knapp {
         margin-top: 3rem;
         margin-bottom: 1.5rem;
