--- a/src/BeslutterSide/beslutterTilskuddsperioder/beslutterTilskuddsperioder.less
+++ b/src/BeslutterSide/beslutterTilskuddsperioder/beslutterTilskuddsperioder.less
@@ -45,10 +45,12 @@
                     }
                     & > button,
                     p:nth-child(1) {
+                        padding: 0.75rem 2.5rem;
                         margin-bottom: 1rem;
                     }
                     & > button:nth-child(1),
                     p:nth-child(1) {
+                        padding: 0.75rem 2.5rem;
                         margin-left: 4rem;
                     }
                 }
