Oppdatert knapper til nytt design system
Co-authored-by: havardmj <Havard.Myrvold.Johannessen@nav.no>
Co-authored-by: Millad Dagdoni <millad.dagdoni@nav.no>

--- a/src/AvtaleSide/DelLenkeTilAvtalen/SendVarselModal.less
+++ b/src/AvtaleSide/DelLenkeTilAvtalen/SendVarselModal.less
@@ -25,6 +25,11 @@
         flex-direction: column;
         align-items: center;
     }
+
+    &__kopierKnapp {
+        width: 11rem;
+        align-self: center;
+    }
 }
 
 @media (min-width: @screen-sm-min) {
