--- a/src/komponenter/modal/bekreftelseModal.less
+++ b/src/komponenter/modal/bekreftelseModal.less
@@ -36,24 +36,9 @@
         padding: 0 0.5rem;
     }
 
-    &__lenkeknapp {
-        padding: 0 1rem;
-        align-items: center;
-        display: flex;
-        flex-direction: column;
-        height: @button-height;
-        justify-content: center;
-        width: 100%;
-
-        &:focus {
-            outline: none;
-            box-shadow: 0 0 0 3px #ffbd66;
-        }
-
-        span {
-            max-width: 100%;
-            overflow: hidden;
-            text-overflow: ellipsis;
+    &__knapp {
+        &:nth-child(1){
+            margin-right: 1rem;
         }
     }
 
