lagt til erstatter for radipanel

--- a/src/OpprettAvtale/OpprettAvtaleVeileder/OpprettAvtale.less
+++ b/src/OpprettAvtale/OpprettAvtaleVeileder/OpprettAvtale.less
@@ -110,16 +110,10 @@
             margin-left: 0.2rem;
         }
 
-        &__tiltakstype-wrapper {
+        &__tiltakstype-wrapper > .navds-radio-buttons {
             display: flex;
             flex-wrap: wrap;
 
-            label {
-                width: 25rem;
-                flex-grow: 1;
-                margin-right: 0.5rem;
-                margin-bottom: 0.5rem;
-            }
         }
 
         &__horisontalGruppeWrapper {
